# gst-tsfilter-plugin

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: README.md  ci.yml  docker-publish.yml
app/: CMakeLists.txt  main.cpp
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
test/: CMakeLists.txt  README.md  analyze_pids.py  analyze_ts_files.sh  run_all_tests.sh  test_20_files.sh  test_all_files.sh  test_hls_stream.sh  test_single.py  test_tsfilter_comprehensive.c  ts_reporter.c
tsfilter/: CMakeLists.txt  meson.build
tsfilter/src/: config.h  tsfilter.c  tsfilter.h  tsfilter_crc.c  tsfilter_crc.h  tsfilterplugin.c
